src/test/ui/feature-gate/unstable-attribute-allow-issue-0.stderr
error[E0545]: incorrect 'issue'
  --> $DIR/unstable-attribute-allow-issue-0.rs:12:1
   |
LL | #[unstable(feature = "unstable_test_feature", issue = "something")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

